--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 header{
     height: 100vh;
-    padding-top: 2rem;
+    padding-top: 6rem;
     overflow: hidden;
 }
 .header-container{
@@ -42,11 +42,11 @@ header{
 
 .header-container .me{
     background: linear-gradient(var(--primery), transparent);
-    width: 22rem ;
+    width: 17rem ;
     height: 30rem;
     position: absolute;
-    left: calc(50% - 11rem);
-    margin-top: 4rem;
+    left: calc(50% - 8rem);
+    margin-top: 2rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 5rem 1.5rem;
@@ -61,4 +61,23 @@ header{
     transform: rotate(90deg);
     font-weight: 300;
     font-size: .9rem;
+}
+
+/* ========================responcive=========================== */
+
+/* media queries (medium devices) */
+@media screen and (max-width: 1040px) {
+    header{
+        height: 68vh;
+    }
+}
+
+/* media queries (small devices) */
+@media screen and (max-width: 600px) {
+    header{
+        height: 100vh;
+    }
+    .header-socials, .scroll-down{
+        display: none;
+    }
 }
