--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 header{
     height: 100vh;
-    padding-top: 6rem;
+    padding-top: 4rem;
     overflow: hidden;
 }
 .header-container{
@@ -49,7 +49,8 @@ header{
     margin-top: 2rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
-    padding: 5rem 1.5rem;
+    /* padding: 5rem 1.5rem; */
+    filter: brightness(1.17) contrast(1.24) grayscale(0.1) ;    
 }
 
 /* ======================Scroll down====================== */
@@ -68,7 +69,7 @@ header{
 /* media queries (medium devices) */
 @media screen and (max-width: 1040px) {
     header{
-        height: 68vh;
+        height: 100vh;
     }
 }
 
@@ -76,6 +77,7 @@ header{
 @media screen and (max-width: 600px) {
     header{
         height: 100vh;
+        padding-top: 1rem;
     }
     .header-socials, .scroll-down{
         display: none;
