--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -26,6 +26,6 @@ nav a:hover{
     background-color: rgba(0, 0, 0, 0.4);
 }
 nav a.active{
-    background-color: var(--bg-color);
-
+    background-color: var(--primary);
+    color: var(--bg-color);
 }
